--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
+  background-color: blueviolet;
   font-family: "Poppins";
   font-size: 22px;
+  color: white;
 }
