--- a/src/views/GlobalGoal/style.css
+++ b/src/views/GlobalGoal/style.css
@@ -1,7 +1,11 @@
 .charity-card {
   border-radius: 1.25rem;
   border: 1px solid rgba(255, 255, 255, 0.24);
-  background: linear-gradient(149deg, rgba(255, 255, 255, 0.07) 8.34%, rgba(255, 255, 255, 0.16) 83.92%);
+  background: linear-gradient(
+    149deg,
+    rgba(255, 255, 255, 0.07) 8.34%,
+    rgba(255, 255, 255, 0.16) 83.92%
+  );
   box-shadow: 10px 5px 24px -1px rgba(81, 81, 81, 0.09);
   backdrop-filter: blur(20px);
 }
