--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   overscroll-behavior: none;
   overflow: hidden;
   font-family: "Poppins" !important;
-  font-size: 22px;
+  /* font-size: 22px; */
   color: white;
 }
 
